tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_2.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((z - z) * (2 + 2)) MOD ((200 - 200) MOD (0 - y))) < (((2 MOD 1) + (+ y)) - (- (z + 2))));
               q := ((((200 MOD 0) MOD (1223 - 200)) MOD (+ (1223 DIV 2))) >= (((x + 2) * (y DIV 0)) + ((0 + z) - (+ 1223))));
               p := (((- (- 1)) + ((1223 DIV 200) MOD (0 MOD z))) <= (((+ 2) * (2 + 0)) DIV ((- 2) - (y MOD y))));
               y := (((+ (2 MOD 1223)) + ((1223 + y) * (0 MOD 0))) * (((y + 200) + (y MOD x)) DIV (- (200 MOD 0))));
               q := ((((2 - 2) + (1223 * 0)) * ((1223 MOD 200) * (+ y))) = (((2 * 200) + (x - x)) DIV ((y + 2) * (x * x))));
               q := ((- (+ (x * y))) >= (((- 2) * (0 DIV 1223)) MOD ((+ 200) * (1223 * 1))));
               x := (((- (+ y)) MOD ((1 DIV 0) MOD (0 DIV x))) - (((z + 1223) MOD (200 + z)) DIV ((0 MOD y) DIV (200 MOD 0))));
               p := ((((1 MOD 1) * (1 - 2)) * ((200 + 1) DIV (+ x))) > (((z * z) * (z DIV 200)) - (- (0 DIV x))));
               z := ((- (- (- 200))) DIV (((0 * 200) + (0 MOD 1)) DIV (+ (x - 1223))));
  (* error *)  z := (+ (+ ((p + z) MOD (- x))))
END Test20.